--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>HYPERION_OMNI // OS</title>
+    <!-- Dynamic Favicon (Geometric H) -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%23000000%22/><path d=%22M30 25V75M70 25V75M30 50H70%22 stroke=%22%23ffffff%22 stroke-width=%2212%22 stroke-linecap=%22round%22/></svg>">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    
+    <!-- PrismJS for Code Highlighting -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-typescript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-bash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-json.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-css.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-jsx.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-tsx.min.js"></script>
+
     <style>
       :root {
         --bg-main: #000000;
@@ -20,16 +36,16 @@
 
       /* Cyber Theme (Default Dark) */
       .cyber {
-        --bg-main: #050505;
+        --bg-main: #030304;
         --bg-surface: #0a0a0c;
-        --bg-surface-highlight: #121215;
+        --bg-surface-highlight: #141418;
         --border-color: #1f1f22;
         --text-primary: #e0e0e0;
         --text-secondary: #80808a;
         --color-accent: #00f0ff; /* Neon Cyan */
       }
 
-      /* Minimal Theme (High Contrast Dark) */
+      /* Minimal Theme */
       .minimal {
         --bg-main: #000000;
         --bg-surface: #000000;
@@ -43,12 +59,12 @@
       /* Light Theme */
       .light {
         --bg-main: #ffffff;
-        --bg-surface: #f4f4f5; /* zinc-100 */
-        --bg-surface-highlight: #e4e4e7; /* zinc-200 */
-        --border-color: #d4d4d8; /* zinc-300 */
+        --bg-surface: #f4f4f5;
+        --bg-surface-highlight: #e4e4e7;
+        --border-color: #d4d4d8;
         --text-primary: #09090b;
         --text-secondary: #52525b;
-        --color-accent: #2563eb; /* blue-600 */
+        --color-accent: #2563eb;
       }
 
       body {
@@ -58,6 +74,7 @@
         transition: background-color 0.3s ease, color 0.3s ease;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        font-feature-settings: "ss01", "ss02", "cv01", "cv02";
       }
 
       /* Custom Scrollbar - Minimal */
@@ -84,6 +101,20 @@
           -ms-overflow-style: none;
           scrollbar-width: none;
       }
+
+      /* Prism Overrides */
+      pre[class*="language-"] {
+        margin: 0 !important;
+        border-radius: 0 0 0.5rem 0.5rem;
+        background: #0d1117 !important;
+        text-shadow: none !important;
+        font-family: 'JetBrains Mono', monospace !important;
+        font-size: 13px !important;
+        line-height: 1.6 !important;
+      }
+      code[class*="language-"], pre[class*="language-"] {
+        text-shadow: none !important;
+      }
     </style>
     <script>
       tailwind.config = {
@@ -107,6 +138,7 @@
             animation: {
               'fade-in': 'fadeIn 0.5s ease-out forwards',
               'slide-up': 'slideUp 0.5s ease-out forwards',
+              'spin-slow': 'spin 3s linear infinite',
             },
             keyframes: {
               fadeIn: {
@@ -130,7 +162,8 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
-    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.24.1"
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.24.1",
+    "remark-gfm": "https://esm.sh/remark-gfm@^4.0.0"
   }
 }
 </script>
